fix: navigation overflow on medium sizes

--- a/index.css
+++ b/index.css
@@ -638,7 +638,7 @@ select {
 
     .nav {
         margin-top: -1.5rem;
-        margin-right: -3rem;
+        margin-right: 0;
     }
 
     .navbar-toggler {
